fix letter spacing, alignments, whole storage header clickable,..

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -32,7 +32,7 @@ body {
   font-size: $font-size-normal;
   font-style: normal;
   font-weight: normal;
-  letter-spacing: $character-spacing-medium;
+  letter-spacing: $character-spacing-small;
   line-height: $line-spacing-m;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
