--- a/frontend/src/components/search/Search.module.scss
+++ b/frontend/src/components/search/Search.module.scss
@@ -49,6 +49,7 @@
 
     &::placeholder {
       color: #ffffffba;
+      text-transform: capitalize;
     }
   }
 
